--- a/s1fp/style.css
+++ b/s1fp/style.css
@@ -101,6 +101,16 @@ body {
     color: white;
     transform: rotate(-55deg);
 }
+#command:hover {
+    top: 300px;
+    left: 720px;
+    font-size: 90px;
+    position: absolute;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Urbanist', sans-serif;
+    color: turquoise;
+    transform: rotate(-55deg);
+}
 #blade {
     top: 300px;
     left: 875px;
