--- a/s1fp/stylechop.css
+++ b/s1fp/stylechop.css
@@ -2,3 +2,39 @@ body {
     background: burlywood;
 }
 
+p{
+    text-align: center;
+}
+p[tabindex] {
+    transition-duration: 0;
+    transition-delay: 99999s;
+}
+
+  
+p[tabindex]:active {
+    transition-delay: 0s;
+    background-color: brown;
+}
+
+#tablecenter {
+    margin-left: auto;
+    margin-right: auto;
+}
+#tabledesign {
+    color: white;
+    border-color: burlywood;
+    background-color: white;
+    width: 250px;
+    height: 250px;
+    border-radius: 10%;
+
+}
+
+#tabledesign:hover {
+    background-color: coral;
+        
+}
+
+#tabledesign:hover img {
+    opacity: 0;
+}
