--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,125 @@
+body {
+    background:#F88379;
+}
 
+.petal {
+    width:300px;
+    height:50px;
+    background: white;
+    border-radius: 50%;
+    position: absolute;
+    top: 150px; 
+    left: 40px;
+}
+
+.petal1 {
+    width:300px;
+    height:50px;
+    background: white;
+    border-radius: 50%;
+    transform: rotate(60deg);
+    position: absolute;
+    top: 150px; 
+    left: 40px;
+}
+
+.petal2 {
+    width:300px;
+    height:50px;
+    background: white;
+    border-radius: 50%;
+    transform: rotate(120deg);
+    position: absolute;
+    top: 150px; 
+    left: 40px;
+}
+
+.circle {
+    height: 50px;
+    width: 50px;
+    position:absolute;
+    top: 152px;
+    left: 162px;
+    border-radius: 50%;
+    background: #F4BB44;
+}
+
+#coco {
+    top: 400px;
+    left: 200px;
+    width: 400px;
+    height: 200px; 
+    /* background-color: #90EE90; */
+    border-top-left-radius: 220px;  
+    border-top-right-radius: 220px;
+    border: 30px solid burlywood;
+    border-bottom: 0;
+    transform: rotate(-160deg);
+    position: absolute;
+}
+
+#coco1 {
+    width: 380px;
+    height: 190px; 
+    /* background-color: #90EE90; */
+    border-top-left-radius: 190px;  
+    border-top-right-radius: 190px;
+    border: 10px solid #987554;
+    border-bottom: 0;
+    position: absolute;
+}
+
+#coco2 {
+    top: 5px;
+    left: 5px;
+    width: 340px;
+    height: 170px; 
+    border-top-left-radius: 190px;  
+    border-top-right-radius: 190px;
+    border: 25px solid #F7F9E0;
+    border-bottom: 0;
+    position: absolute;
+}
+
+.knife {
+    background: #5b3e31;
+    width: 100px;
+    height: 720px;
+    top: 400px;
+    left: 900px;
+    position: absolute;
+    transform: rotate(35deg);
+}
+
+#command {
+    top: 300px;
+    left: 770px;
+    font-size: 75px;
+    position: absolute;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Urbanist', sans-serif;
+    color: white;
+    transform: rotate(-55deg);
+}
+#command:hover {
+    top: 300px;
+    left: 720px;
+    font-size: 90px;
+    position: absolute;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Urbanist', sans-serif;
+    color: turquoise;
+    transform: rotate(-55deg);
+}
+#blade {
+    top: 300px;
+    left: 875px;
+    width: 460px;
+    height: 150px; 
+    background-color: #F6F3E7;
+    border-top-left-radius: 0;  
+    border-top-right-radius: 220px;
+    border: 30px solid #F6F3E7;
+    transform: rotate(-55deg);
+    position: absolute;
+}
