--- a/s1fp/css/stylebeach.css
+++ b/s1fp/css/stylebeach.css
@@ -2,7 +2,47 @@
 html,body {width:100%;height:100%;}
 
 body {
-  background: black;
+  background:#F88379;
+}
+
+.icon {
+  position: absolute;
+  top: 90%;
+  left: 10%;
+  transform: translate(-50%,-50%);
+  width: 80px;
+  height: 60px;
+  cursor: pointer;
+}
+
+.arrow {
+  position: absolute;
+  top: 25px;
+  width: 90%;
+  height: 10px;
+  background-color: #fff;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  animation: arrow 700ms linear infinite;
+}
+
+.arrow::after, .arrow::before {
+  content: '';
+  position: absolute;
+  width: 60%;
+  height: 10px;
+  right: 38px;
+  background-color: #fff;
+}
+
+.arrow::after {
+  top: -12px;
+  transform: rotate(-45deg);
+}
+
+.arrow::before {
+  top: 12px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  transform: rotate(45deg);
 }
 
 .button {
@@ -35,7 +75,6 @@ body {
   top: 50%;
   transform: translate(-50%,-50%);
   border-radius: 10px;
-  box-shadow: 0px 0px 20px #000;
   background: linear-gradient(#A2EEF2,#fdd288,white);
   overflow: hidden;
 }
