--- a/s1fp/css/styleocean.css
+++ b/s1fp/css/styleocean.css
@@ -1,12 +1,86 @@
-
-.ocean{
-    width:100%;
-    height:100%;
-    position: absolute;
-    background: linear-gradient(#A2EEF2,#ADD8E6, #8CFFDB,white);
+body {
+  background: #F88379;
 }
 
+.icon {
+  position: absolute;
+  top: 90%;
+  left: 90%;
+  transform: translate(-50%,-50%);
+  width: 80px;
+  height: 60px;
+  cursor: pointer;
+}
 
+.arrow {
+  position: absolute;
+  top: 25px;
+  width: 90%;
+  height: 10px;
+  background-color: #fff;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  animation: arrow 700ms linear infinite;
+}
+
+.arrow::after, .arrow::before {
+  content: '';
+  position: absolute;
+  width: 60%;
+  height: 10px;
+  right: -8px;
+  background-color: #fff;
+}
+
+.arrow::after {
+  top: -12px;
+  transform: rotate(45deg);
+}
+
+.arrow::before {
+  top: 12px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  transform: rotate(-45deg);
+}
+
+.iconb {
+  position: absolute;
+  top: 90%;
+  left: 10%;
+  transform: translate(-50%,-50%);
+  width: 80px;
+  height: 60px;
+  cursor: pointer;
+}
+
+.arrowb {
+  position: absolute;
+  top: 25px;
+  width: 90%;
+  height: 10px;
+  background-color: #fff;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  animation: arrow 700ms linear infinite;
+}
+
+.arrowb::after, .arrowb::before {
+  content: '';
+  position: absolute;
+  width: 60%;
+  height: 10px;
+  right: 38px;
+  background-color: #fff;
+}
+
+.arrowb::after {
+  top: -12px;
+  transform: rotate(-45deg);
+}
+
+.arrowb::before {
+  top: 12px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  transform: rotate(45deg);
+}
 
 .center{
     position: absolute;
@@ -74,7 +148,7 @@
     position: absolute;
     font-family: 'Dancing Script', cursive;
     font-family: 'Urbanist', sans-serif;
-    color: #123456;
+    color: white;
 
 }
 
