--- a/s2a2/style.css
+++ b/s2a2/style.css
@@ -1,6 +1,12 @@
+input {display: none;}
+
 body{
     position: relative;
-    background-image: url('mushroom.png');
+    background-image: url('mushroom.jpg');
+    background-size: cover;
+    text-align: center;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 7vh;
   }
 
   
@@ -27,8 +33,8 @@ p{
         background-color: coral;
         color: white;
         background-color: black;
-        width: 5vw;
-        height: 5vh;
+        width: 3vw;
+        height: 3vh;
         vertical-align:middle; 
         text-align:center;
         transition:0s 180s;
@@ -77,6 +83,60 @@ p{
         text-align:center;
         transition:0s;
     }
+    #imagemario {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #mario:checked ~ #imagemario{
+        display: block;
+      }
+
+      #imageluigi {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #luigi:checked ~ #imageluigi{
+        display: block;
+      }
+
+      #imagewario {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #wario:checked ~ #imagewario{
+        display: block;
+      }
+
+      #imageyoshi {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #yoshi:checked ~ #imageyoshi{
+        display: block;
+      }
+
+      #imagepeach {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #peach:checked ~ #imagepeach{
+        display: block;
+      }
 }
 
 @media (min-width:600px)  { 
@@ -147,6 +207,84 @@ p{
         text-align:center;
         transition:0s;
     }
+     #tabledesign img {
+        opacity:0;
+    }
+    
+    #tabledesign {
+        background: linear-gradient(-45deg, #00ff33, #ff0000, #ffffff, #000000);
+        background-size: 150% 150%;
+        animation: gradient 5s ease infinite;
+        height: 15vh;
+    }
+    
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+
+    #imagemario {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #mario:checked ~ #imagemario{
+        display: block;
+      }
+
+      #imageluigi {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #luigi:checked ~ #imageluigi{
+        display: block;
+      }
+
+      #imagewario {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #wario:checked ~ #imagewario{
+        display: block;
+      }
+
+      #imageyoshi {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #yoshi:checked ~ #imageyoshi{
+        display: block;
+      }
+
+      #imagepeach {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #peach:checked ~ #imagepeach{
+        display: block;
+      }
+    
 }
 
 
@@ -197,27 +335,60 @@ p{
         }
     }
     
-    #tabledesign img {
-        opacity:0;
-        transition:0s 180s;
-    }
-    
-    #tabledesign:hover {
-        background: blue;
+      #imagemario {
+        display: none;
         width: 15vw;
         height: 15vh;
-        vertical-align:middle; 
-        text-align:center;
-        transition:0;
-    }
     
-    #tabledesign:hover img {
-        opacity:1;
-        vertical-align:middle; 
-        text-align:center;
-        transition:0s;
-    }
-     
+      }
+      
+      #mario:checked ~ #imagemario{
+        display: block;
+      }
+
+      #imageluigi {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #luigi:checked ~ #imageluigi{
+        display: block;
+      }
+
+      #imagewario {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #wario:checked ~ #imagewario{
+        display: block;
+      }
+
+      #imageyoshi {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #yoshi:checked ~ #imageyoshi{
+        display: block;
+      }
+
+      #imagepeach {
+        display: none;
+        width: 15vw;
+        height: 15vh;
+    
+      }
+      
+      #peach:checked ~ #imagepeach{
+        display: block;
+      }
 }
 
 
