--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Gill Sans Extrabold', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -210,7 +210,7 @@ table, th, td {
 th, td {
     padding: 20px;
     font-size: 1.2em;
-    color: #000000;
+    color: #ffffff;
     border-radius: 50px;
     text-align:center;
 }
