--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -210,7 +210,7 @@ table, th, td {
 th, td {
     padding: 20px;
     font-size: 1.2em;
-    color: #ffffff;
+    color: #ff3e3e;
     border-radius: 50px;
     text-align:center;
 }
